testsuite/poke.pkl/string-diag-1.pk
/* { dg-do compile } */

/* Invalid \-sequence in string.  */

var s = "foo\zbar"; /* { dg-error "" } */
